syntax = "proto3";

package tests;

message ValueList {
  repeated string values = 1;
}

message SignedV4Test {
  string fileName = 1;
  string description = 2;
  string bucket = 3;
  string object = 4;
  string method = 5;
  int64 expiration = 6;
  string timestamp = 7;
  string expectedUrl = 8;
  map<string, ValueList> headers = 9;
}

message Testcases {
  repeated SignedV4Test signedV4Tests = 1;
}
